# valenor

./: .gitignore  README.md  agents.py  pyproject.toml  requirements.txt  valen.py  valenor.bat  valenor.command  valenor.sh
valenor/: __init__.py  __main__.py  agents.py  chat.py  cli.py  i18n.py  memory.py  paths.py  skills.py
